--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,14 @@
-name:                project-euler
-version:             0.1.0.0
-github:              "lccro/project-euler"
-license:             BSD3
-author:              "Cyber"
-maintainer:          "lccro@msn.com"
-copyright:           "Copyleft 2020"
+name: project-euler
+version: 0.1.0.0
+github: "lccro/project-euler"
+license: BSD3
+author: "Cyber"
+maintainer: "lccro@msn.com"
+copyright: "Copyleft 2020"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
+  - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,34 +17,34 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/lccro/project-euler#readme>
+description: Please see the README on GitHub at <https://github.com/lccro/project-euler#readme>
 
 dependencies:
-- base >= 4.7 && < 5
-- split
-- primes
+  - base >= 4.7 && < 5
+  - primes
+  - text
 
 library:
   source-dirs: src
 
 executables:
   project-euler-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - project-euler
+      - project-euler
 
 tests:
   project-euler-test:
-    main:                Spec.hs
-    source-dirs:         test
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - project-euler
+      - project-euler
