--- a/project-euler-haskell.cabal
+++ b/project-euler-haskell.cabal
@@ -1,8 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.33.0.
 --
 -- see: https://github.com/sol/hpack
+--
+-- hash: 5993b79f34ce1af93d064c5bcee5b04d1f786ee8fe96666c6df4993aa3fe5446
 
 name:           project-euler-haskell
 version:        0.1.0.0
@@ -31,7 +33,8 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
     , hspec
     , primes
@@ -48,7 +51,8 @@ executable project-euler-haskell-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
     , hspec
     , primes
@@ -68,7 +72,8 @@ test-suite project-euler-haskell-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
     , hspec
     , primes
